--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@base-ui/react": "^1.1.0",
     "@parse/react-ssr": "^0.0.1-alpha.18",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.8",
@@ -28,7 +29,8 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-toastify": "^11.0.5",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
