--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -28,7 +28,6 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts"
-, "server/index.js"  ],
+    "**/*.mts", ],
   "exclude": ["node_modules"]
 }
